--- a/wenjieModel.ipynb
+++ b/wenjieModel.ipynb
@@ -285,7 +285,9 @@
    "cell_type": "code",
    "execution_count": 124,
    "id": "collected-sheriff",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -3390,6 +3392,8 @@
     "epochs, bs, Sp = 3000, 1, 10\n",
     "train_history = []\n",
     "\n",
+    "#train\n",
+    "\n",
     "for ep in range(epochs):\n",
     "    shuffle(train_gtrajs)\n",
     "    ep_total_loss, val_total_loss = 0,0\n",
@@ -3443,7 +3447,7 @@
     }
    ],
    "source": [
-    "#testing\n",
+    "#testing error\n",
     "\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
@@ -3495,6 +3499,8 @@
     }
    ],
    "source": [
+    "#scatter the ground truth data at time = 0\n",
+    "\n",
     "plt.xlim([0, 1])\n",
     "plt.ylim([0, 1])\n",
     "plt.scatter(grand_truth_position[0,:,0], grand_truth_position[0,:,1])"
@@ -3530,6 +3536,7 @@
     }
    ],
    "source": [
+    "#scatter the ground truth data at 100th time step\n",
     "plt.xlim([0, 1])\n",
     "plt.ylim([0, 1])\n",
     "plt.scatter(grand_truth_position[10,:,0], grand_truth_position[10,:,1])"
@@ -3572,25 +3579,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "found-scratch",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-127-e1f7257c3fee>:13: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  data = Data(x = torch.tensor(node_feats), edge_index= torch.tensor(edge_inds),edge_attr=torch.tensor(edge_weights))\n"
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-55c0fd76d43b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorch_geometric\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mData\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_gtrajs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
      ]
     }
    ],
    "source": [
+    "#plot the prediction at 100th time step\n",
+    "\n",
     "model.cpu()\n",
     "model.eval()\n",
     "from torch_geometric.data import Data\n",
     "_, data = next(enumerate(test_gtrajs[0]))\n",
-    "for i in range(500):\n",
+    "for i in range(100):\n",
     "    x = model(data.x, data.edge_index, data.edge_attr.unsqueeze(dim=0).t())\n",
     "    x_next= (data.x[:,0:2]+dt*x).detach().numpy()\n",
     "    vel = x.detach().numpy()\n",
@@ -3600,62 +3612,11 @@
     "    edge_weights = np.array([np.linalg.norm(node_feats[edg[0]][0:2]-node_feats[edg[1]][0:2]) for edg in edge_inds.T])\n",
     "    data = Data(x = torch.tensor(node_feats), edge_index= torch.tensor(edge_inds),edge_attr=torch.tensor(edge_weights))\n",
     "        \n",
-    "    if (i+1)%499 == 0:\n",
+    "    if (i+1)%99 == 0:\n",
     "        plt.xlim([0, 1])\n",
     "        plt.ylim([0, 1])\n",
     "        plt.scatter(data.x[:,0], data.x[:,1])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "id": "bronze-wilderness",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([1.4373, 1.4380, 1.4367, 1.4268, 1.4250, 1.4301, 1.4326, 1.4380, 1.4337,\n",
-       "        1.4332, 1.4311, 1.4237, 1.4294, 1.4227, 1.4144, 1.4154, 1.4007, 1.4086,\n",
-       "        1.4064, 1.4379, 1.4300, 1.4325, 1.4235, 1.4214, 1.4319, 1.4181, 1.4119,\n",
-       "        1.3947, 1.3933, 1.4068, 1.4343, 1.4297, 1.4259, 1.4360, 1.4316, 1.4250,\n",
-       "        1.4175, 1.4117, 1.4136, 1.4044, 1.3933, 1.3898, 1.3788, 1.3859, 1.3842,\n",
-       "        1.3784, 1.3989, 1.4284, 1.4347, 1.4179, 1.4136, 1.4089, 1.4107, 1.4223,\n",
-       "        1.3930, 1.4012, 1.4225, 1.4127, 1.4178, 1.4012, 1.3924, 1.3932, 1.4042,\n",
-       "        1.3820, 1.3805, 1.3918, 1.3901, 1.4031, 1.4090, 1.3744, 1.3664, 1.3725,\n",
-       "        1.4225, 1.4077, 1.4142, 1.4132, 1.3743, 1.3707, 1.3665, 1.4189, 1.3991,\n",
-       "        1.4044, 1.4211, 1.3807, 1.3924, 1.4237, 1.4167, 1.4279, 1.4214, 1.3853,\n",
-       "        1.3936, 1.3883, 1.3958, 1.4038, 1.3720, 1.3796, 1.3742, 1.3873, 1.3759,\n",
-       "        1.3584, 1.3648, 1.3732, 1.4314, 1.4365, 1.4098, 1.4228, 1.4150, 1.3819,\n",
-       "        1.3737, 1.3814, 1.3639, 1.4120, 1.4346, 1.3881, 1.3972, 1.3717, 1.3708,\n",
-       "        1.3596, 1.3750, 1.3814, 1.4152, 1.4030, 1.4241, 1.4221, 1.4217, 1.3813,\n",
-       "        1.4335, 1.3948, 1.4323, 1.4264, 1.4311, 1.4379, 1.4265, 1.4141, 1.3721,\n",
-       "        1.3802, 1.3672, 1.3567, 1.3584, 1.3627, 1.3855, 1.3815, 1.3666, 1.3701,\n",
-       "        1.3524, 1.3577, 1.3461, 1.3397, 1.3478, 1.4050, 1.4021, 1.4022, 1.4301,\n",
-       "        1.4165, 1.4216, 1.4214, 1.3919, 1.4161, 1.3344, 1.3950, 1.4172, 1.4381,\n",
-       "        1.4099, 1.4251, 1.3368, 1.3803, 1.3892, 1.4069, 1.4123, 1.3366, 1.3399,\n",
-       "        1.3568, 1.3609, 1.3556, 1.3722, 1.3361, 1.3412, 1.3407, 1.3507, 1.3436,\n",
-       "        1.3504, 1.3656, 1.3586, 1.3523, 1.3497, 1.3576, 1.3360, 1.3633, 1.3472,\n",
-       "        1.3688, 1.3638, 1.3535, 1.3959, 1.4029, 1.3568, 1.3487, 1.3447, 1.3476,\n",
-       "        1.3378, 1.3556, 1.3493, 1.3380, 1.3558, 1.3869, 1.3491, 1.3505, 1.3383,\n",
-       "        1.4069, 1.4075, 1.4038, 1.3398, 1.3560, 1.3476, 1.3387, 1.3629, 1.3937,\n",
-       "        1.4066, 1.3464, 1.4003, 1.3642, 1.3599, 1.3865, 1.3358, 1.3386, 1.3457,\n",
-       "        1.3547, 1.3365, 1.3928, 1.4136, 1.3980, 1.3852, 1.3986, 1.3986, 1.3884,\n",
-       "        1.3848, 1.3842, 1.3951, 1.4079, 1.4135, 1.3927, 1.3402, 1.3474, 1.3431,\n",
-       "        1.3620, 1.3565, 1.3354, 1.3428, 1.3524, 1.3554, 1.3791, 1.3342, 1.3725,\n",
-       "        1.3631, 1.3524, 1.3753, 1.3422, 1.3512, 1.3815, 1.3688, 1.3896, 1.3779,\n",
-       "        1.3812, 1.3930, 1.3814, 1.3814, 1.3895, 1.3643, 1.3601, 1.3676, 1.3562,\n",
-       "        1.4191, 1.3553, 1.3648, 1.3416, 1.3595, 1.3723, 1.3361, 1.3524, 1.3345,\n",
-       "        1.3736, 1.3474, 1.3423, 1.3536, 1.3710, 1.3443, 1.3643, 1.3579, 1.3443,\n",
-       "        1.3744, 1.3733, 1.3738, 1.3935, 1.3870, 1.4327, 1.3618])"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
